# Kira

./: .dockerignore  .gitignore  ARCHITECTURE.md  AUDIT_FINDINGS.md  DESIGN.md  Dockerfile  MASTER_BLUEPRINT.md  README.md  components.md  docker-compose.yml  entrypoint.sh  matching.md  roadmap.md
.github/workflows/: docker.yml
backend/: .gitignore  alembic.ini  pyproject.toml
backend/backend/: _verify_walk_thread.py
backend/kira/: __init__.py  activity.py  cli.py  config.py  database.py  download_guard.py  ffmpeg_setup.py  fpcalc_setup.py  log.py  longpath.py  main.py  models.py  net.py  notify.py  posters.py  scanner.py  scheduler.py  schemas.py  settings_store.py  tasks.py  url_guard.py  watcher.py  xattr_store.py
backend/kira/api/: auth.py  cleanup.py  collections.py  files.py  health.py  history.py  images.py  integrations.py  match_cleanup.py  matches.py  packs.py  providers.py  rename.py  scans.py  search.py  series.py  settings.py  subtitles.py  system.py  trash.py  webhooks.py
backend/kira/integrations/: __init__.py  arr_paths.py  health_monitor.py  media_server.py  radarr.py  sonarr.py
backend/kira/matcher/: __init__.py  acronyms.py  bipartite.py  cluster_signal.py  cour_routing.py  engine.py  episode_validation.py  folder_lock.py  keys.py  media_type.py  similarity.py  strict_mode.py  text_distance.py
backend/kira/matcher/cascade/: __init__.py  runner.py  types.py
backend/kira/matcher/cascade/metrics/: __init__.py  acronym.py  anime_season_ordinal.py  anime_tvdb_jp.py  cluster_signal.py  corroboration.py  episode_count_sanity.py  episode_title.py  folder_identity.py  fribb_aid_filter.py  fribb_authority.py  substring.py  text_metrics.py  trigram.py  year_rank.py
backend/kira/music/: __init__.py  acoustid.py  matcher.py  musicbrainz.py  tags.py
backend/kira/packs/: __init__.py  apply.py  loader.py  resolver.py  schema.py  subs.py
backend/kira/parser/: __init__.py  format_stripper.py  mediainfo.py  parser.py  patterns.py  release_tokens.json  scene_rules.py
backend/kira/providers/: __init__.py  _osdbhash.py  anidb.py  anime_lists.py  anime_mappings.py  anime_offline_db.py  base.py  factory.py  fanarttv.py  opensubtitles.py  tmdb.py  tvdb.py
backend/kira/renamer/: __init__.py  nfo.py  operations.py  templates.py
backend/kira/subtitles/: __init__.py  _common.py  aggregate.py  animetosho.py  backfill.py  coverage.py  embedded.py  errors.py  model.py  naming.py  pack.py  podnapisi.py  prefs.py  scoring.py  searchcache.py  store.py  subcache.py  subdl.py  subsource.py  yifysubtitles.py
backend/migrations/: env.py
backend/migrations/versions/: 7500d72e9360_baseline_full_schema_as_of_0_5_0.py
backend/tests/: conftest.py  test_absolute_cour_routing.py  test_acoustid.py  test_acronym.py  test_acronyms.py  test_activity.py  test_air_date.py  test_anidb_acronym.py  test_anime_lists.py  test_anime_numbering.py  test_anime_offline_relations.py  test_api_hardening_round2.py  test_api_limit_bounds.py  test_arr_paths.py  test_artwork.py  test_artwork_download.py  test_auto_rename_execute.py  test_auto_rename_gate.py  test_basic_auth.py  test_bipartite_absolute.py  test_bipartite_title.py  test_bulk_canonical_season.py  test_bulk_delete.py  test_bundled_key_fallback.py  test_canonical_season_fallback.py  test_cascade_scoring_fixes.py  test_cleanup_custom_and_nonvideo.py  test_cli.py  test_collection.py  test_collections.py  test_cors_error_handling.py  test_cour_routing_precise.py  test_csrf_guard.py  test_db_pragmas.py  test_disk_space_preflight.py  test_download_guard.py  test_embedded_id.py  test_embedded_id_resolve.py  test_episode_drift_heal.py  test_episode_nfo_meta.py  (+136 more)
docs/: KIRA_PACKS.md
docs/examples/: one-pace.example.json
frontend/: .env.production  DESIGN_GUIDELINES.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/public/backdrop/: CREDITS.md
frontend/public/providers/: .gitkeep
frontend/src/: App.tsx  index.css
frontend/src/components/: ActivityIndicator.tsx  CoverPopup.tsx  DatasetStatus.tsx  FfmpegStatus.tsx  FolderPickerModal.tsx  FpcalcStatus.tsx  LibraryGrid.tsx  LiveApiPanel.tsx  LoginGate.tsx  NotificationsBell.tsx  Onboarding.test.tsx  Onboarding.tsx  ScanProgress.tsx  SubtitleBrowseModal.tsx  TechBadge.tsx  modals.tsx  settings-blocks.tsx  ui.tsx
frontend/src/components/CoverPopup/: CandidateList.tsx  ForceImportModal.tsx  Hero.tsx  HeroCoverMosaic.tsx  MarqueeText.tsx  MovieBody.tsx  MusicBody.tsx  SeriesBody.tsx  dupeModals.tsx  format.tsx  quality.test.ts  quality.ts  rows.tsx  rowsMusic.tsx  types.ts  useSonarrQueuePopup.ts
frontend/src/components/base/activity-feed/: activity-feed.tsx
frontend/src/components/base/alert/: alert.tsx
frontend/src/components/base/badges/: badges.tsx
frontend/src/components/base/breadcrumbs/: breadcrumbs.tsx
frontend/src/components/base/button-group/: button-group.tsx
frontend/src/components/base/buttons/: button-utility.tsx  button.tsx
frontend/src/components/base/charts/: charts-base.tsx
frontend/src/components/base/featured-icons/: featured-icon.tsx
frontend/src/components/base/input/: input-number.tsx  input.tsx
frontend/src/components/base/metrics/: metric-card.tsx
frontend/src/components/base/nav/: nav-item.tsx
frontend/src/components/base/notifications/: notification.tsx
frontend/src/components/base/progress-indicators/: progress-bar.tsx
frontend/src/components/base/segmented/: segmented-control.tsx
frontend/src/components/base/toggle/: toggle.tsx
frontend/src/lib/: adapters.test.ts  adapters.ts  api.ts  cache.ts  confBands.test.ts  confBands.ts  data.ts  episodes.ts  format.ts  icons.tsx  posters.ts  types.ts  utils.ts
frontend/src/pages/: DashboardPage.tsx  HistoryPage.tsx  ReviewPage.tsx  SettingsPage.tsx  SubtitleHistory.tsx
frontend/src/pages/settings/: AdvancedSection.tsx  IntegrationsSection.tsx  PacksSection.tsx  PathsSection.tsx  SubtitlesCard.tsx  helpers.test.ts  helpers.ts
frontend/src/styles/: globals.css  theme.css
frontend/src/test/: setup.ts
tools/: build_one_pace_pack.py
