[project]
name = "kira"
version = "0.5.0"
description = "Self-hosted, Docker-native media metadata fixer"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx[http2]>=0.28",   # http2 (h2) → multiplex provider calls over one connection (fewer TLS handshakes)
    "python-multipart>=0.0.20",
    # PB-1: drop-in stdlib XML API hardened against XXE / billion-laughs /
    # external-entity attacks. Required because we parse XML fetched from
    # AniDB's CDN — a MITM or compromised cache could inject malicious
    # entities to exfiltrate local files or DoS the parser. Same API as
    # xml.etree.ElementTree.
    "defusedxml>=0.7.1",
    # Autopsy 5: bounded LRU + TTL cache for the series-episodes endpoint.
    # The previous handwritten timestamp dict was unbounded — a long-lived
    # server browsing 500+ shows over hours accumulated dozens of MBs of
    # episode lists in process memory until OOM-killed. cachetools.TTLCache
    # enforces both a max entry count AND a per-entry TTL, with proper
    # async-safe access via an asyncio.Lock at the call site.
    "cachetools>=5.5",
    # Naming-template engine (Tier 1.5). SandboxedEnvironment renders the
    # rename templates — pipe filters, conditionals, defaults — replacing the
    # old str.replace() loop. Sandboxed so user-authored templates can't reach
    # Python internals.
    "jinja2>=3.1",
    # Phase 16: true file metadata (real resolution / codec / HDR / audio
    # channels) read from the container headers, powering authoritative
    # {vc}/{hdr}/{channels} naming tokens. The win_amd64 / manylinux wheels
    # bundle the native libmediainfo; the code degrades to filename-only when
    # the lib can't load, so this stays optional-at-runtime.
    "pymediainfo>=6.1",
    # Watched-folders auto-scan daemon. Rust-backed filesystem-event watcher
    # (awatch) with a poll fallback for NAS/SMB mounts. Drives the opt-in
    # auto-scan in kira/watcher.py.
    "watchfiles>=0.21",
    # Subtitle season-pack extraction beyond stdlib zip. py7zr is a PURE-PYTHON
    # 7z reader (no external tool). rarfile reads RAR3/RAR5 but delegates
    # decompression to a backend tool (unrar / unar / 7z / bsdtar) since RAR's
    # algorithm is proprietary — on Windows the built-in System32\tar.exe
    # (bsdtar/libarchive) serves as that backend with zero install.
    "py7zr>=0.21",
    "rarfile>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
]

# `kira` console command — a scriptable client for a running Kira server.
# See kira/cli.py. Also runnable as `python -m kira.cli`.
[project.scripts]
kira = "kira.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kira*"]

[tool.setuptools.package-data]
# Phase 17: shipped base release-token tables loaded by parser/format_stripper.py.
kira = ["parser/release_tokens.json"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Silence ONLY the benign aiosqlite + pytest-asyncio teardown race: a SQLite
# connection's worker thread calls `call_soon_threadsafe` on a per-test event
# loop that pytest-asyncio already closed → "RuntimeError: Event loop is closed",
# surfaced as a PytestUnhandledThreadExceptionWarning. It's a test-harness
# artifact (production runs one long-lived uvicorn loop) with zero functional
# impact. Scoped to the exact message so a genuine thread exception still fails.
filterwarnings = [
    "ignore:Exception in thread .*_connection_worker_thread:pytest.PytestUnhandledThreadExceptionWarning",
]
